<resources>
    <string name="app_name">bluetoothled</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IOT 환경분석</string>
    <string name="nav_header_subtitle">iot@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_author">Author</string>
    <string name="menu_thinkercad">ThinkerCad</string>
    <string name="menu_wokwi">Wokwi</string>
    <string name="menu_proteus">Proteus</string>
    <string name="menu_led">Led</string>
    <string name="menu_joystick">Joystick</string>
</resources>