<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_author"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_author" />
        <item
            android:id="@+id/nav_thinkercad"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_thinkercad" />
        <item
            android:id="@+id/nav_wokwi"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_wokwi" />
        <item
            android:id="@+id/nav_led"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_led" />
        <item
            android:id="@+id/nav_joystick"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_joystick" />
    </group>
</menu>